noinst_LIBRARIES = liblmn_map.a
liblmn_map_a_CFLAGS = \
						  -I../             \
						  -I../map		     \
						  $(CFLAGS)

liblmn_map_a_SOURCES = \
						   lmn_map_util.h													\
						   lmn_hash.h														\
						   lmn_map.c				lmn_map.h								\
						   lmn_hopscotch_hashmap.c  lmn_hopscotch_hashmap.h
