noinst_LIBRARIES = liblmn_map.a
liblmn_map_a_CFLAGS = \
					  	  -std=c99          \
						  -I../             	\
						  -I../map		     		\
						  $(CFLAGS)

liblmn_map_a_SOURCES = \
						   lmn_map_util.h																		\
						   lmn_hash.h																				\
						   lmn_map.c								lmn_map.h								\
						   lmn_closed_hashmap.c  		lmn_closed_hashmap.h 		\
						   lmn_chained_hashmap.c  	lmn_chained_hashmap.h 	\
						   lmn_hopscotch_hashmap.c  lmn_hopscotch_hashmap.h
