noinst_LIBRARIES = liblmn_map.a

liblmn_map_a_CFLAGS = \
						  -I../             	\
							$(CFLAGS) 					\
						  -I../map		     	

liblmn_map_a_SOURCES = \
						   lmn_map_util.h																		\
						   lmn_hash.h																				\
						   lmn_map.cc								lmn_map.h								\
						   lmn_closed_hashmap.cc  		lmn_closed_hashmap.h 		\
						   lmn_chained_hashmap.cc  	lmn_chained_hashmap.h
